--- a/XamarinForms.JaimeControls/XamarinForms.JaimeControls.csproj
+++ b/XamarinForms.JaimeControls/XamarinForms.JaimeControls.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{F8731DD4-8E5F-4B82-A43E-B40A3E8688B5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YearMonthSelectListView.Plugin</RootNamespace>
-    <AssemblyName>YearMonthSelectListView.Plugin</AssemblyName>
+    <RootNamespace>XamarinForms.JaimeControls</RootNamespace>
+    <AssemblyName>XamarinForms.JaimeControls</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
